fix(Hyperlinks): Increased underline visibility

--- a/src/styles/base/_base_document.scss
+++ b/src/styles/base/_base_document.scss
@@ -250,7 +250,7 @@ a {
   text-decoration: none;
   cursor: pointer;
   background-color: transparent; // Remove the gray background on active links in IE 10.
-  border-bottom-color: rgba($col, .2);
+  border-bottom-color: rgba($col, .3);
   border-bottom-style: dotted;
   border-bottom-width: 1px;
   -webkit-text-decoration-skip: objects; // Remove gaps in links underline in iOS 8+ and Safari 8+.
